# portfolio-website

./: .gitignore  README.md  db.sqlite3  manage.py  passenger_wsgi.py  pyproject.toml  requirement.txt  requirements.txt  update.sh
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200714_1059.py  0003_auto_20200714_1112.py  0004_post_summary.py  0005_category_slug.py  0006_auto_20200714_1834.py  0007_auto_20200714_1851.py  0008_auto_20200714_1906.py  0009_searchterms.py  0010_post_visits.py  0011_alter_category_id_alter_comment_id_alter_post_id_and_more.py  0012_alter_post_content.py
config/: gunicorn.py
feyton/: asgi.py  settings.py  urls.py  wsgi.py
feyton/settings/: base.py  local.py  production.py
index/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
index/migrations/: 0001_initial.py  0002_auto_20200715_1511.py  0003_auto_20200717_1018.py  0004_assistancerequest_message.py  0005_alter_assistancerequest_id_alter_member_id_and_more.py
static/css/: about.css  detail.css  forestry.css  login.css  main.css  profile.css  signup.css  styles.css  util.css  work.css
static/dashboard/: blog.js  dashboard.js  edit.js  main.css
static/js/: detail.js  index.js  login.js  main.js  profile.js  scripts.js  signup.js  work.js
templates/: base.html  index.html
templates/account/: login.html  signup.html
templates/blog/: base.html  blog.html  categories.html  create.html  detail.html  search.html  tag.html  tags.html
user/: admin.py  forms.py  models.py  urls.py  views.py
(+27 files in other folders)
